kubernetes/pinchflat/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pinchflat
  labels:
    app: pinchflat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinchflat
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: pinchflat
        image: ghcr.io/kieraneglin/pinchflat:latest
        ports:
        - containerPort: 8945
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: pinchflat-data
          mountPath: /config
        - name: pinchflat-channels
          mountPath: /downloads
      volumes:
      - name: pinchflat-data
        persistentVolumeClaim:
          claimName: pinchflat-data-pvc
      - name: pinchflat-channels
        persistentVolumeClaim:
          claimName: pinchflat-channels-pvc
